entirely unhelpful edits

--- a/bq_cosmology.tex
+++ b/bq_cosmology.tex
@@ -35,8 +35,8 @@
        \addr Department of Engineering\\
        Cambridge University\\
        \AND
-       \name Michael Osborne \email mike@robots.ox.uk \\
-       \addr Department of Statistics \\
+       \name Michael Osborne \email mosb@robots.ox.uk \\
+       \addr Department of Engineering Science \\
        Oxford University\\
        }
 
